--- a/flaskps/templates/auth/panel_components/mensajes_alertas.html
+++ b/flaskps/templates/auth/panel_components/mensajes_alertas.html
@@ -1,4 +1,4 @@
-{%with messages = get_flashed_messages()%}
+{%with messages = get_flashed_messages(category_filter=["success"]) %}
     {%if messages%}
         {% for message in messages %}
             <div class="alert-fixed">
