--- a/flaskps/templates/auth/panel_components/docentes.html
+++ b/flaskps/templates/auth/panel_components/docentes.html
@@ -138,7 +138,7 @@
                             {% endif %}
                             {% if p.nombre == 'docente_destroy' %}
                             <td>
-                            <a href="/delete_docente/{{row.id}}" class="btn btn-danger btn-sm" onclick="return confirm('Are You Sure For Delete?')"><i class="fas fa-user-minus mr-2"></i>Eliminar</a>
+                            <a href="/delete_docente/{{row.id}}" class="btn btn-danger btn-sm" onclick="return confirm('¿Seguro deseas eliminar el docente?')"><i class="fas fa-user-minus mr-2"></i>Eliminar</a>
                             </td>
                             {% endif %}
                             {% endfor %}
@@ -259,7 +259,7 @@
                                                 </div>
                                                 <div class="col-6">
                                                     <label>Número</label>
-                                                    <input type="number" min="0" class="form-control" value="{{row.numero}}" placeholder="Numero DNI" name="numero" required="1">
+                                                    <input type="number" min="99999" class="form-control" value="{{row.numero}}" placeholder="Numero DNI" name="numero" required="1">
                                                 </div>
                                             </div>
                                                 
@@ -267,7 +267,7 @@
                                             <div class="form-group row">
                                                 <div class="col-6">
                                                     <label>Teléfono</label>
-                                                    <input type="number" min="0" class="form-control" value="{{row.tel}}" placeholder="Telefono" name="tel" required="1">
+                                                    <input type="number" min="99999" class="form-control" value="{{row.tel}}" placeholder="Telefono" name="tel" required="1">
                                                 </div>
                                             </div>
                                             <hr>
@@ -380,7 +380,7 @@
                                     </div>
                                     <div class="col-6">
                                         <label>Número</label>
-                                        <input type="number" min="0" class="form-control" placeholder="Numero DNI" name="numero" required="1">
+                                        <input type="number" min="99999" class="form-control" placeholder="Numero DNI" name="numero" required="1">
                                     </div>
                                 </div>
                                 
@@ -388,7 +388,7 @@
                                 <div class="form-group row">
                                     <div class="col-6">
                                         <label>Teléfono</label>
-                                        <input type="number" min="0" class="form-control" placeholder="Telefono" name="tel" required="1">
+                                        <input type="number" min="99999" class="form-control" placeholder="Telefono" name="tel">
                                     </div>
                                 </div>
                                 <hr>
