--- a/flaskps/templates/auth/login.html
+++ b/flaskps/templates/auth/login.html
@@ -76,7 +76,7 @@
 
                                                     <!-- Sign in button -->
                                                     <div class="col-md-12 mt-5">
-                                                        <input class="btn btn-rounded btn-new-green white-text" type="submit" value="Entrar">
+                                                        <button type="submit" class="btn btn-rounded btn-new-green white-text">Entrar</button>
                                                     </div>
 
                                                 </div>
