--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -19,8 +19,11 @@
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_instrumentos"><i class="fas fa-guitar mr-2"></i>Instrumentos</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_usuarios"><i class="fas fa-users mr-2"></i>Usuarios</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_nucleos"><i class="fas fa-map-marked-alt mr-2"></i>Núcleos</a></li>
-                                <li class="list-group-item menuItem" role="button"><a href="/panel_ciclos"><i class="fas fa-school mr-2"></i>Ciclos lectivos</a></li>
-                                <li class="list-group-item menuItem" role="button"><a href="/panel_adminsitio"><i class="fas fa-globe-americas black3 mr-2"></i>Administración del sitio</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_ciclos"><i class="fas fa-school mr-2"></i>Ciclos</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_ciclos"><i class="fas fa-school mr-2"></i>Talleres</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_ciclos"><i class="fas fa-user-friends mr-2"></i>Docentes taller</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_ciclos"><i class="fas fa-user-friends mr-2"></i>Alumnos taller</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_adminsitio"><i class="fas fa-cog mr-2"></i>Configuracion</a></li>
                             </ul>
                             <hr>
                             <ul class="list-group list-group-flush">
