ABM estudiante taller y docente taller completo con paginacion

--- a/flaskps/templates/auth/panel_components/docentes_taller.html
+++ b/flaskps/templates/auth/panel_components/docentes_taller.html
@@ -1,11 +1,11 @@
 {% extends "auth/panel.html" %}
 {% block contenttitle %}
-<i class="fas fa-school black3 mr-2"></i>Talleres
+<i class="fas fa-school black3 mr-2"></i>Docentes en talleres
 {% endblock %}
 {% block contentitem %}
     <div class="row">
         <div class="col-12 col-md-7 mb-3">
-            <h1 class="h4 w400">Listado de talleres con ciclos asignados</h1>
+            <h1 class="h4 w400">Listado de docentes asignados a taller</h1>
             <hr>
             <div class="row">
                 <div class="col-12">
@@ -15,23 +15,26 @@
                             <tr>
                                 <th>Año</th>
                                 <th>Semestre</th>
-                                <th>Fecha de inicio</th>
-                                <th>Fecha de fin</th>
+                                <th>Inicio</th>
+                                <th>Fin</th>
                                 <th>Taller</th>
+                                <th>Docente</th>
                                 <th>Eliminar</th>
                             </tr>
                             <!-- Row Estudiantes -->
-                            {% for ciclo in ciclotalleres %}
+                            {% for drt in docente_responsable_taller %}
                             <tr>
-                                <td>{{ciclo.año}}</td>
-                                <td>Semestre {{ciclo.semestre}}</td>
-                                <td>{{ciclo.fecha_ini}}</td>
-                                <td>{{ciclo.fecha_fin}}</td>
-                                <td>{{ciclo.nombre}}</td>
+                                <td>{{drt.año}}</td>
+                                <td>Semestre {{drt.semestre}}</td>
+                                <td>{{drt.fecha_ini}}</td>
+                                <td>{{drt.fecha_fin}}</td>
+                                <td>{{drt.nombretaller}}</td>
+                                <td>{{drt.nombredocente}} {{drt.apellidodocente}}</td>
                                 <td>
-                                    <form action="{{ url_for('delete_taller_ciclo') }}" method="POST" onsubmit="return confirm('¿Seguro deseas eliminar el ciclo taller?')"> 
-                                        <input type="hidden" name="ciclo_lectivo_id" value="{{ciclo.ciclo_lectivo_id}}">
-                                        <input type="hidden" name="taller_id" value="{{ciclo.taller_id}}">
+                                    <form action="{{ url_for('delete_docente_taller') }}" method="POST" onsubmit="return confirm('¿Seguro deseas desasignar el docente del taller?')"> 
+                                        <input type="hidden" name="ciclo_lectivo_id" value="{{drt.ciclo_lectivo_id}}">
+                                        <input type="hidden" name="taller_id" value="{{drt.taller_id}}">
+                                        <input type="hidden" name="docente_id" value="{{drt.docente_id}}">
                                         <button type="submit" class="btn btn-danger btn-sm"><i class="fas fa-user-minus mr-2"></i>Eliminar</button>
                                     </form>
                                 </td>
@@ -48,12 +51,12 @@
                             {% if page == 1 %}
                             <a class="btn btn-primary mr-3 disabled" href="/">Anterior</a>
                             {% else %}
-                            <a class="btn btn-primary mr-3" href="/panel_ciclos/{{page - 1}}">Anterior</a>
+                            <a class="btn btn-primary mr-3" href="/panel_docentes_taller/{{page - 1}}">Anterior</a>
                             {% endif %}
                             {% if lastpage == 1 %}
                             <a class="btn btn-primary mr-3 disabled" href="/">Siguiente</a>
                             {% else %}
-                            <a class="btn btn-primary mr-3" href="/panel_ciclos/{{page + 1}}">Siguiente</a>
+                            <a class="btn btn-primary mr-3" href="/panel_docentes_taller/{{page + 1}}">Siguiente</a>
                             {% endif %}
                         </div>
                     </nav>
@@ -62,25 +65,25 @@
         </div>
         <div class="col-12 col-md-5 mb-3">
             <div class="card p-3">
-            <h1 class="h4 w400">Asignar taller a ciclo lectivo</h1>
+            <h1 class="h4 w400">Asignar docente a taller</h1>
             <hr>
-                <form action="{{ url_for('insert_taller_ciclo') }}" method="POST"> 
+                <form action="{{ url_for('insert_docente_taller') }}" method="POST"> 
                    <div class="form-group row">
                        <div class="col-12 my-3">
                            <label>Semestre</label>
-                            <select name="ciclo_lectivo_id" class="browser-default custom-select" required>
+                            <select name="ciclo_lectivo_taller_id" class="browser-default custom-select" required>
                                 <option selected disabled>Seleccionar</option>
-                                {% for ciclo in ciclos %}
-                                <option value="{{ciclo.id}}">Semestre: {{ciclo.semestre}}, año: {{ciclo.año}}, fechas: año: {{ciclo.fecha_ini}} - {{ciclo.fecha_fin}}</option>
+                                {% for ciclotaller in ciclotalleres %}
+                                <option value="{{ciclotaller.id}}">Semestre: {{ciclotaller.semestre}}, {{ciclotaller.año}}, Fecha: {{ciclotaller.fecha_ini}} / {{ciclotaller.fecha_fin}}, {{ciclotaller.nombre}}</option>
                                 {% endfor %}
                             </select>
                         </div>
                         <div class="col-12 my-3">
-                           <label>Año que corresponde</label>
-                            <select name="taller_id" class="browser-default custom-select" required>
+                           <label>Docente</label>
+                            <select name="docente_id" class="browser-default custom-select" required>
                                 <option selected disabled>Seleccionar</option>
-                                {% for taller in talleres %}
-                                <option value="{{taller.id}}">{{taller.nombre}}</option>
+                                {% for docente in docentes %}
+                                <option value="{{docente.id}}">{{docente.nombre}} {{docente.apellido}}</option>
                                 {% endfor %}
                             </select>
                         </div>
