--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -19,10 +19,13 @@
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_instrumentos"><i class="fas fa-guitar mr-2"></i>Instrumentos</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_usuarios"><i class="fas fa-users mr-2"></i>Usuarios</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_nucleos"><i class="fas fa-map-marked-alt mr-2"></i>Núcleos</a></li>
-                                <li class="list-group-item menuItem" role="button"><a href="/panel_ciclos"><i class="fas fa-school mr-2"></i>Agregar Ciclos</a></li>
-                                <li class="list-group-item menuItem" role="button"><a href="/panel_talleres"><i class="fas fa-school mr-2"></i>Ciclos Talleres</a></li>
-                                <li class="list-group-item menuItem" role="button"><a href="/panel_docentes_taller"><i class="fas fa-user-friends mr-2"></i>Docentes taller</a></li>
-                                <li class="list-group-item menuItem" role="button"><a href="/panel_ciclos"><i class="fas fa-user-friends mr-2"></i>Alumnos taller</a></li>
+                            </ul>
+                            <hr>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_ciclos"><i class="fas fa-calendar-plus mr-2"></i>Agregar ciclos</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_talleres"><i class="fas fa-school mr-2"></i>Ciclos talleres</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_docentes_taller"><i class="fas fa-user-friends mr-2"></i>Docentes talleres</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_estudiantes_docentes"><i class="fas fa-user-friends mr-2"></i>Estudiantes talleres</a></li>
                                 <li class="list-group-item menuItem" role="button"><a href="/panel_adminsitio"><i class="fas fa-cog mr-2"></i>Configuracion</a></li>
                             </ul>
                             <hr>
